#+title: corfu.el - Changelog
#+author: Daniel Mendler
#+language: en

* Development

- Improve compatibility with Eglot. Fix a manual completion bug in the case when
  Eglot provided no matching candidates.
- =corfu-auto-trigger=: New customization variable to trigger immediate completion
  after certain characters. See also =cape-capf-trigger=.
- =corfu-on-exact-match=: Change default from =insert= to =nil=, which is more
  compatible with auto completion and template/snippet/abbreviation expansion.

* Version 2.4 (2025-10-13)

- Require Emacs 29.1.
- Handle mixed tty/graphical displays.
- Do not enable Corfu in read-only buffers.

* Version 2.3 (2025-06-12)

- Minor corrections and fixes.

* Version 2.2 (2025-05-26)

- Guard Corfu hooks to automatically print stack traces in order to ease
  debugging.

* Version 2.1 (2025-04-22)

- =corfu-history-duplicate= and =corfu-history-decay=: New customization options to
  adjust the rank of duplicate history elements, such that they appear earlier
  in the completion list.
- =corfu-history-mode=: Add =corfu-history= to =savehist-minibuffer-history-variables=
  in order to save the history if =savehist-mode= is enabled.

* Version 2.0 (2025-03-28)

- ~corfu-quick~: Ensure that popup does not move.

* Version 1.7 (2025-01-28)

- Bugfixes only.

* Version 1.6 (2024-12-22)

- Require Emacs 28.1.
- Use fringe to display scroll bar. This change improves performance and makes
  sure that the scroll bar cannot be pushed outside the child frame by the
  content. This affects for example ~cape-emoji~.
- Improve suffix alignment.
- Remember popup width during completion to avoid width fluctuations. Basically
  the popup is only allowed to grow.
- ~corfu-insert-separator~: Jump back to prompt if a candidate is previewed.

* Version 1.5 (2024-07-26)

- New customization variable =global-corfu-minibuffer= to enable Corfu in the
  minibuffer.
- Unbind =C-a= in =corfu-map=. This binding is only needed in modes which override